# godot-python

./: .appveyor.yml  .azure-pipelines.yml  .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  IF ELSE IN PYTHON  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  SConstruct  appveyor.yml  build.py  make.py  meson.build  meson_options.txt  output.preprocessed.c  requirements.in  requirements.txt
.github/scripts/: meson_setup_or_dump_log.py
.github/workflows/: build.yml
addons/pythonscript_export/: input_box.py  plugin.cfg  plugin.py  python_export.py  python_export.tscn
addons/pythonscript_repl/: PythonREPL.tscn  hack_regular.tres  input_box.py  plugin.py  python_repl.py  python_repl.tscn
addons/repl/: Hack_Regular.tres  InputBox.py  PythonREPL.py  plugin.py
build_tools/: dist.py  godot_binary.py  python_distrib.py
docs/: io.rst  memory.rst
example/: godot.cfg  godot.py  icon.png.import  main.gd  main.tscn  node.gd  node.py  player.py  test.py
examples/: SConscript
examples/pong/: ball.gd  ball.png.import  ball.py  icon.png.import  libpython3.6m.so.1.0  paddle.gd  paddle.png.import  paddle.py  paddle.tscn  pong.gd  pong.gdns  pong.py  pong.tscn  project.godot  pythonscript  separator.png.import  test.py
examples/pong_multiplayer/: ball.gd  ball.png.import  ball.py  ball.tscn  lobby.gd  lobby.tscn  paddle.gd  paddle.tscn  pong.gd  pong.tscn  project.godot  pythonscript  separator.png.import
extras/: release_LICENSE.txt  release_README.txt
generation/: generate_bindings.py  generate_builtins.py  generate_gdnative_api_struct.py  generate_pool_arrays.py  type_specs.py
generation/bindings_templates/: bindings.tmpl.pxd  bindings.tmpl.pyi  bindings.tmpl.pyx  class.tmpl.pxd  class.tmpl.pyx  method.tmpl.pyx
generation/builtins_templates/: _ignored.tmpl.pxi  aabb.tmpl.pxi  array.tmpl.pxi  basis.tmpl.pxi  builtins.tmpl.pxd  builtins.tmpl.pyi  builtins.tmpl.pyx  color.tmpl.pxi  dictionary.tmpl.pxi  gdstring.tmpl.pxi  node_path.tmpl.pxi  plane.tmpl.pxi  quat.tmpl.pxi  rect2.tmpl.pxi  render.tmpl.pxd  render.tmpl.pyi  render.tmpl.pyx  rid.tmpl.pxi  transform.tmpl.pxi  transform2d.tmpl.pxi  vector2.tmpl.pxi  vector3.tmpl.pxi
generation/pool_arrays_templates/: pool_arrays.tmpl.pxd  pool_arrays.tmpl.pyx  pool_x_array.tmpl.pyx
isengard/: README.md  __init__.py  _api.py  _collector.py  _const.py  _db.py  _dump.py  _exceptions.py  _loader.py  _rule.py  _runner.py  _target.py  _utils.py
isengard/tests/: conftest.py  test_api.py  test_base.py  test_collector.py  test_db.py  test_definition.py  test_dump.py  test_rule.py  test_run.py  test_runner_clean.py  test_runner_run.py  test_target.py
isengard2/: __init__.py  _api.py  _collector.py  _const.py  _db.py  _dump.py  _exceptions.py  _rule.py  _runner.py  _target.py
isengard2/tests/: conftest.py  test_collector.py  (+7 more)
misc/: git-pre-push.hook  multi_platform_release.py  pin_github_actions.py  release_LICENSE.txt  release_README.txt  release_pythonscript.gdextension  release_pythonscript.gdnlib
pythonscript/: BUILD.py  SConscript  SCsub  _godot.pxd  _godot.pyx  _godot_editor.pxi  _godot_gdapi.pxd  _godot_gdapi.pyx  _godot_instance.pxi  _godot_io.pxi  _godot_profiling.pxi  _godot_script.pxi  bindings.cpp  bindings.h  cffi_bindings_api.h  config.py  gdnative.pxd  gdnative_api_struct.pxd  generate_cffi_bindings.py  mpconfigport.h  py_binding.cpp  py_debug.cpp  py_editor.cpp  py_instance.cpp  py_instance.h  py_language.cpp  py_language.h  py_loader.cpp  py_loader.h  py_script.cpp  py_script.h  py_script_instance.cpp  py_script_instance.h  py_script_language.cpp  py_script_language.h  pythonscript.c  pythonscript.h  pythonscript.pxd  pythonscript.pyx  pythonscript_hook.c  (+7 more)
scripts/: copyfiles.py  cythoner.py  extract_godot_version.py  fetch_godot.py  fetch_python_distrib.py  gdextension_cython_preprocessor.py  generate_builtins.py  generate_gdextension_interface_pxd.py  generate_gdnative_interface_pxd.py  generate_tmpl.py  godot_extension_class_cython_preprocessor.py  install_python_distrib.py  python_distrib.py  symlink.py
src/: _pythonscript.pyx  _pythonscript_editor.pxi  _pythonscript_extension_class_language.pxi  _pythonscript_extension_class_script.pxi  _pythonscript_specs.pxi  meson.build  pythonscript.c
src/godot/: __init__.pxd  __init__.py  __init__.pyi  _builtin.tmpl.pxi  _builtins.pxd.j2  _builtins.pyi.j2  _builtins.pyx.j2  _builtins.tmpl.pxd  _builtins.tmpl.pyi  _builtins.tmpl.pyx  _classes.pxd.j2  _classes.pyi.j2  _classes.pyx.j2  _version.in.py  builtins.macros.pxd.j2  builtins.pxd.j2  builtins.pyi.j2  builtins.pyx.j2  classes.pxd.j2  classes.pyi.j2  classes.pyx.j2  conversion.pxd.j2  conversion.pyx.j2  meson.build
src/godot/_builtins_pyx/: class.j2  class.pxi.j2  class.tmpl.pxi  constructor.pxi.j2  constructor.tmpl.pxi  gdapi.tmpl.pxi
src/godot/_hazmat/: __init__.pxd  gdapi.pxd  gdapi.pxd.j2  gdapi_ptrs.pxi.j2  gdapi_ptrs.tmpl.pxi  meson.build
src/godot/builtins_pxd/: class.pxd.j2  constructor.pxd.j2  conversion.pxd.j2  member.pxd.j2  method.pxd.j2
src/godot/builtins_pyx/: class.pxi.j2  class.pyx.j2  constructor.pxi.j2  constructor.pyx.j2  conversion.pyx.j2  member.pyx.j2
src/godot/classes_pyx/: class.pyx.j2
src/godot/hazmat/: extension_class.pxd  extension_class.pyx  gdapi.conversion.pxd.j2  gdapi.conversion.pyx.j2  gdapi.macros.pxd.j2  gdapi.ptrs.pyx.j2  gdapi.pxd.j2  gdapi.pyx  gdapi.pyx.j2  gdapi_ptrs.pxi.j2  gdnative_ptrs.pxd.j2  gdnative_ptrs.pyx.j2  meson.build
src/godot/hazmat/gdapi_pxd/: conversion.pxd.j2  macros.pxd.j2  meth.pxd.j2  struct.pxd.j2
src/godot/hazmat/gdapi_pyx/: conversion.pyx.j2  ptrs.pyx.j2
src/repl_addon/: plugin.cfg
tests/: BUILD.py  README.md  SConscript  main.py  meson.build  run.py  test_dynamic_bindings.py  test_vector2.py
tools/: SConscript  api.json  assetlib_release.py  clang-format-travis-check.sh  clang-format.sh  generate_bindings.py  generate_bindings_header.py  generate_builtins.py  generate_gdnative_cffidefs.py  generate_godot_api_json.py  generate_godot_bindings_module.py  multi_platform_release.py
(+333 files in other folders)
