option('cpython_distrib_version', type: 'string', value: '3.9.7', description: 'Version of CPython to ship')
option('godot_headers', type: 'string', value: 'godot_headers', description: 'Path to Godot extension headers directory')
option('real_is_double', type: 'boolean', value: false, description: 'Built for Godot with 64bits floating point numbers (i.e. double) in builtins instead of 32bits (i.e. float)')
